--- a/source/scss/5-modules/modal.scss
+++ b/source/scss/5-modules/modal.scss
@@ -47,7 +47,9 @@
 
 
     @media only screen and (max-width:480px){
-     height:70vh;
+     height:80vh;
+     width:84%;
+     display:flex;
     }
   }
 
